# first-to-five

./: Cargo.toml  README.md  workspace.code-workspace
proptest-regressions/rules/: mod.txt
src/: main.rs
src/app/: mod.rs
src/rules/: mod.rs
