[package]
name = "first-to-five"
version = "0.1.0"
authors = ["Vesa Laakso <482561+valscion@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "*"
itertools = "0.10.0"

[dev-dependencies]
colored-diff = "0.2.2"
proptest = "1.0.0"
rand = "0.8"
