[package]
name = "first-to-five"
version = "0.1.0"
authors = ["Vesa Laakso <482561+valscion@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.53.0"
piston2d-graphics = "0.39.0"
pistoncore-glutin_window = "0.68.2"
piston2d-opengl_graphics = "0.77.0"
itertools = "0.10.0"
rand = "0.8"

[dev-dependencies]
colored-diff = "0.2.2"
proptest = "1.0.0"
